
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_ctl {int sc_len; scalar_t__ sc_unit; int ctl_id; int sc_id; int ss_sysaddr; int sc_family; int ctl_name; } ;
struct sockaddr {int dummy; } ;
struct ctl_info {int sc_len; scalar_t__ sc_unit; int ctl_id; int sc_id; int ss_sysaddr; int sc_family; int ctl_name; } ;
typedef int kernctl_info ;
typedef int kernctl_addr ;


 int AF_SYSTEM ;
 int AF_SYS_CONTROL ;
 int CTLIOCGINFO ;
 int PF_SYSTEM ;
 int SOCK_DGRAM ;
 int SYSPROTO_CONTROL ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int errno ;
 int ioctl (int,int ,struct sockaddr_ctl*) ;
 int memset (struct sockaddr_ctl*,int ,int) ;
 int printf (char*,char*,...) ;
 int socket (int ,int ,int ) ;
 char* strerror (int ) ;
 int strlcpy (int ,char*,int) ;

int ctl_open(char* control_name) {
  int sock;
  int error = 0;
  struct ctl_info kernctl_info;
  struct sockaddr_ctl kernctl_addr;

  sock = socket(PF_SYSTEM, SOCK_DGRAM, SYSPROTO_CONTROL);
  if (sock < 0) {
    printf("failed to open a SYSPROTO_CONTROL socket: %s\n", strerror(errno));
    goto done;
  }

  memset(&kernctl_info, 0, sizeof(kernctl_info));
  strlcpy(kernctl_info.ctl_name, control_name, sizeof(kernctl_info.ctl_name));

  error = ioctl(sock, CTLIOCGINFO, &kernctl_info);
  if (error) {
    printf("Failed to get the control info for control named \"%s\": %s\n", control_name, strerror(errno));
    goto done;
  }

  memset(&kernctl_addr, 0, sizeof(kernctl_addr));
  kernctl_addr.sc_len = sizeof(kernctl_addr);
  kernctl_addr.sc_family = AF_SYSTEM;
  kernctl_addr.ss_sysaddr = AF_SYS_CONTROL;
  kernctl_addr.sc_id = kernctl_info.ctl_id;
  kernctl_addr.sc_unit = 0;

  error = connect(sock, (struct sockaddr *)&kernctl_addr, sizeof(kernctl_addr));
  if (error) {
    printf("Failed to connect to the control socket: %s\n", strerror(errno));
    goto done;
  }

done:
  if (error && sock >= 0) {
    close(sock);
    sock = -1;
  }

  return sock;
}
